--- a/phaser/phaser_tutorial_02/part1.html
+++ b/phaser/phaser_tutorial_02/part1.html
@@ -20,11 +20,20 @@ function preload() {
     game.load.image('sky', 'assets/sky.png');
     game.load.image('ground', 'assets/platform.png');
     game.load.image('star', 'assets/star.png');
+    game.load.spritesheet('baddie', 'assets/baddie.png', 32, 32);
     game.load.spritesheet('dude', 'assets/dude.png', 32, 48);
 }
 
+let player;
+let platform;
+let cursors;
+let score = 0;
+let scoreText;
+let enemy;
+
 function create() {
-    // game.add.sprite(0, 0, 'star');
+    game.add.sprite(0, 0, 'star');
+    //basics
     game.physics.startSystem(Phaser.Physics.ARCADE);
     game.add.sprite(0,0, 'sky');
     platforms = game.add.group();
@@ -36,6 +45,8 @@ function create() {
     ledge.body.immovable = true;
     ledge = platforms.create(-150,250, 'ground');
     ledge.body.immovable = true;
+
+    //player
     player = game.add.sprite(32, game.world.height -300, 'dude');
     game.physics.arcade.enable(player);
     player.body.bounce.y = 0.2;
@@ -43,11 +54,80 @@ function create() {
     player.body.collideWorldBounds = true;
     player.animations.add('left', [0, 1, 2, 3], 10, true);
     player.animations.add('right', [5, 6, 7, 8], 10, true);
+
+    //enemy
+    enemy = game.add.sprite(32, game.world.height -450, 'baddie');
+    game.physics.arcade.enable(enemy);
+    enemy.body.bounce.y = 0.1;
+    enemy.body.gravity.y = 400;
+    enemy.body.collideWorldBounds = true;
+    enemy.animations.add('left', [0, 1], 4, true);
+    enemy.animations.add('right', [2, 3], 4, true);
+    
+    //cursors
+    cursors = game.input.keyboard.createCursorKeys();
+    stars = game.add.group();
+    stars.enableBody = true;
+    for (let i = 0; i < 12; i++) {
+        let star = stars.create(i * 70, 0, 'star');
+        console.log('star: ', i)
+        star.body.gravity.y = 60;
+        star.body.bounce.y = 0.7 + Math.random() * 0.2;
+    }
+
+    //score
+    scoreText = game.add.text(16, 16, 'score:0', {fontSize: '32px',
+    fill: '#000' });
 }
 
 function update() {
+    //physics
     const hitPlatform = game.physics.arcade.collide(player, platforms);
+    player.body.velocity.x = 0;
+    game.physics.arcade.collide(stars, platforms);
+    game.physics.arcade.collide(platforms, enemy);
+    game.physics.arcade.moveToObject(enemy, player, 50);
+    game.physics.arcade.overlap(enemy, player, eatPlayer, null, this);
+    game.physics.arcade.overlap(player, stars, collectStar, null, this);
+
+    //controls
+    if (cursors.left.isDown) {
+        player.body.velocity.x = -150;
+        player.animations.play('left')
+        // enemy.animations.play('left');
+        // enemy.body.velocity.x = -100;
+    } else if (cursors.right.isDown) {
+        player.body.velocity.x = 150;
+        player.animations.play('right');
+        // enemy.animations.play('right');
+        // enemy.body.velocity.x = 100
+    } else {
+        player.animations.stop();
+        player.frame = 4;
+    }
+    if (cursors.up.isDown && player.body.touching.down && hitPlatform) {
+        player.body.velocity.y = -350;
+    }
+
 }
+
+function collectStar (player, star) {
+    star.kill();
+    score += 10;
+    scoreText.text = 'Score: ' + score;
+    // if (score = 100) {
+    //     for (let i = 0; i < 12; i++) {
+    //     let star = stars.create(i * 70, 0, 'star');
+    //     console.log('star: ', i)
+    //     star.body.gravity.y = 60;
+    //     star.body.bounce.y = 0.7 + Math.random() * 0.2;
+    // }
+    }
+
+function eatPlayer (enemy, player) {
+    player.kill()
+}
+
 
 </script>
 
